# minishell

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  format.py
.github/workflows/: cmake.yml
src/: CMakeLists.txt  minishell.c
src/execution/: CMakeLists.txt  builtins.c  builtins.h  get_environ.c  get_environ.h  manage_input.c  manage_input.h  process.c  process.h  shell_management.c  shell_management.h
src/history/: CMakeLists.txt  cursor.c  cursor.h  history.c  history.h  vector.c  vector.h
src/libft/: CMakeLists.txt  ft_atoi.c  ft_putstr.c  ft_split_whitespace.c  ft_strcmp.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  libft.h
tests/: CMakeLists.txt  main_tests.c
tests/libft_tests/: ft_atoi_tests.c  ft_atoi_tests.h  ft_split_whitespace_tests.c  ft_split_whitespace_tests.h  ft_strjoin_tests.c  ft_strjoin_tests.h  ft_strlen_tests.c  ft_strlen_tests.h
